styles/styles.css
/* ... */
button[disabled], html input[disabled] {
  cursor: default;
}

input[type=checkbox], input[type=radio] {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  padding: 0;
}

input[type=search] {
  -webkit-appearance: textfield;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
  -webkit-appearance: none;
}

button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

textarea {
  overflow: auto;
  vertical-align: top;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

button, html, input, select, textarea {
  color: #222;
}

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

img {
  vertical-align: middle;
}

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

textarea {
  resize: vertical;
}

.chromeframe {
  margin: .2em 0;
  background: #ccc;
  color: #000;
  padding: .2em 0;
}

.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: '';
  clear: both;
  height: 0;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.visuallyHidden:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
          clip-path: inset(100%);
  clip: rect(0 0 0);
  overflow: hidden;
}

.srOnly {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
          clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

body {
  padding: 0;
  margin: 0;
}

.wrapper {
  max-width: 1425px;
  width: 80%;
  margin: 0 auto;
}

a {
  text-decoration: none;
}

p {
  line-height: 3rem;
}

* {
  border: red 3px red;
}

body {
  background-color: #222222;
}

h1,
h2,
h3,
h5,
nav li,
p,
i,
.pipePrimary {
  color: #FFF;
}

h1 span,
.headerContentBox span,
h3 span,
h4,
.headerContentBox a,
.contactDetailBox p:nth-child(2),
footer p {
  color: #53A2FF;
}

header ul a,
.headerRightDetailsBox p,
.aboutContentBox p,
.skillsContentBox li p,
.project1DetailBox p,
.project3DetailBox p,
.project6DetailBox p,
.projectLinkBox a,
.contactContentBox p {
  color: #7F7F7F;
}

html {
  font-size: 62.5%;
}

body,
input[type="text"],
input[type="email"],
textarea,
input[type="submit"] {
  font-family: 'Hammersmith One', sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: 'Fredoka One', cursive;
}

h2,
h4 {
  margin-bottom: 50px;
}

h1 {
  font-size: 8rem;
  width: 100%;
  margin-bottom: 50px;
}

h2 {
  font-size: 7rem;
}

h3 {
  font-size: 6rem;
  margin-bottom: 20px;
}

h4 {
  font-size: 5rem;
  text-align: center;
  margin-bottom: 70px;
}

h4 span {
  border-bottom: #7F7F7F solid 7px;
}

h5 {
  font-size: 4rem;
  padding-bottom: 30px;
}

h5 span {
  border-bottom: #53A2FF solid 7px;
}

p {
  font-size: 2rem;
}

li {
  font-size: 1.8rem;
}

.headerLeftDetailsBox a {
  font-size: 2rem;
}

nav,
nav ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

nav {
  padding: 60px 0;
}

nav li {
  padding-bottom: 10px;
}

nav i {
  font-size: 4rem;
  padding: 30px 0px;
  margin-bottom: 20px;
  width: 50px;
  height: 80px;
}

nav a {
  padding: 0 20px;
  font-size: 3rem;
}

nav a span:hover,
nav a:focus,
nav i:hover,
nav i:focus {
  color: #53A2FF;
  border-bottom: #53A2FF solid 7px;
}

input[type="checkbox"],
.fa-bars {
  opacity: 0;
}

.pipe {
  font-size: 3.5rem;
  margin: 0 20px;
}

.headerContentBox {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  margin-bottom: 120px;
}

.headerContentBox h4 {
  text-align: left;
  margin-bottom: 40px;
}

.aboutContentBox img {
  width: 100%;
  border-radius: 50%;
  background-color: #53A2FF;
  padding: 10px;
}

.aboutContentBox {
  margin-bottom: 100px;
}

.aboutImgBox {
  width: 40%;
  margin-bottom: 100px;
}

.aboutImgBox img {
  width: 100%;
}

.aboutContentBox {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  margin-bottom: 100px;
}

.aboutContentBox p {
  padding-top: 20px;
  padding-bottom: 100px;
}

.aboutParaBox {
  width: 40%;
}

.aboutParaBox p:first-child {
  padding-bottom: 0px;
}

.skillsContentBox {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  max-width: 1450px;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 100px;
}

.skillsContentBox li {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 25px;
  margin: 0 50px;
}

i {
  font-size: 10rem;
  width: 100px;
  height: 100px;
}

i:hover,
i:focus {
  color: #53A2FF;
}

.skillsContentBox p {
  padding-top: 10px;
}

i,
.skillsContentBox li p {
  text-align: center;
}

.fa-terminal,
.fa-universal-access,
.fa-laptop-code {
  font-size: 8rem;
}

.javascriptBox,
.accessibilityBox,
.laptopBox {
  width: 150px;
  height: 180px;
}

li.javascriptBox {
  margin-bottom: 9px;
}

li.gitBox {
  padding-top: 25px;
}

.laptopBox p {
  padding-top: 20px;
}
/* ... */

